--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "grantflow-backend",
+  "name": "grantflow-frontend",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --watch server.js",
-    "start": "node server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.71.2",
-    "axios": "^1.13.2",
-    "better-sqlite3": "^9.4.3",
-    "cheerio": "^1.1.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "mammoth": "^1.11.0",
-    "multer": "^2.0.2",
-    "openai": "^4.28.0",
-    "pdf-parse": "^2.4.5",
-    "pdfjs-dist": "^5.4.449",
-    "uuid": "^9.0.1"
+    "@supabase/supabase-js": "^2.87.1",
+    "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.7",
+    "lucide-react": "^0.316.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.0"
   }
 }
